added 3rd Colts Blog

--- a/About.htm
+++ b/About.htm
@@ -76,6 +76,9 @@
                 <h2>Welcome To My Website:</h2>
                 <p align="justify">Why, hello there! My name is Jake, and I would like to be the first to welcome you to www.jaketsuyemura.com.  The inspiration for this site came from the great Kenny Luong who was the first to register and fill his own domain. Throughout the development cycle, I hope to learn the basics of Html and CSS programming along with having a little fun on the side. Take a look around and help me to improve!</p>
                 <p align="justify">As of 2014, I am 22 years old. The first 18 of those years were spent on the Big Island of Hawaii. The next 5 placed me on the island of Oahu where I recently completed my degree at the University of Hawaii at Manoa with a Bachelors of Science in Electrical Engineering. I have always had a passion for creating and designing new devices to help solve a specific problem. This desire led me into robotics at an early age where I participated in many FRC compeitions. At the moment, post-graduation, I find myself with some free time to work on this website (and look for a job). Lets see how it turns out!</p>
+
+
+
             </div>
 
         </div>
@@ -152,7 +155,7 @@
             </div>
 
             <div class="col-sm-4">
-  <a href="https://www.joshuariveria.com/">
+  <a href="http://doswah.com/">
              <img class=" img-responsive" src="./About_files/Josh.jpg" a=""></a>
                 <h3>Joshua Rivera
                     <small>Doswah</small>
@@ -241,9 +244,10 @@
     <!-- /.container -->
 
     <!-- JavaScript -->
-    <script src="./About_files/jquery-1.10.2.js"></script>
+    <script src="./About_files/gfyajax-0.517d.js"></script><script src="./About_files/jquery-1.10.2.js"></script>
     <script src="./About_files/bootstrap.js"></script>
     <script src="./About_files/modern-business.js"></script>
+
 
 
 
