--- a/Blog.htm
+++ b/Blog.htm
@@ -62,6 +62,39 @@
                     <h2 class="intro-text text-center"><em>Newest Posts</em></h2>
                     <hr>
                 </div>
+<div class="col-lg-12 text-center">
+                    <img class="img-responsive img-border img-full" src="./Blog_files/Coverphoto3.jpg" alt="">
+                    <h2>Why the Colts will go 8-8:
+  <br>All About Luck<br>
+                        <small>June 14, 2014</small>
+                    </h2>
+                    <p>With a lack of talent on both sides of the ball, what (or who) has been keeping the Colts atop the AFC South? &nbsp;Can the 3rd year quarterback carry his team to the ployoffs once again? &nbsp;Click here to find out.</p>
+
+                    <a href="http://www.jaketsuyemura.com/Blog%20-%20Why%20the%20Colts%20will%20go%208-8%20%20All%20About%20Luck.htm" class="btn btn-default btn-lg">Read More</a>
+                    <hr>
+                </div><div class="col-lg-12 text-center">
+                    <img class="img-responsive img-border img-full" src="./Blog_files/Coverphoto2.jpg" alt="">
+                    <h2>Why the Colts will go 8-8:
+  <br>The Draft<br>
+                        <small>June 7, 2014</small>
+                    </h2>
+                    <p>Have the Colts redeemed themselves from a disappointing free agency period by drafting like a championship team? Analyze and examine how these rookie will contribute to the 2014 squad.</p>
+
+                    <a href="http://www.jaketsuyemura.com/Blog%20-%20Why%20the%20Colts%20will%20go%208-8%20%20The%20Draft.htm" class="btn btn-default btn-lg">Read More</a>
+                    <hr>
+                </div>
+
+<div class="col-lg-12 text-center">
+                    <img class="img-responsive img-border img-full" src="./Blog_files/Coverphoto1.jpg" alt="">
+                    <h2>Why the Colts will go 8-8:
+  <br> Free Agency<br>
+                        <small>June 5, 2014</small>
+                    </h2>
+                    <p>Take an in depth look at the Colt's free agent aquisitions in this mulit-part analysis leading up to the 2014 NFL season.</p>
+
+                    <a href="http://www.jaketsuyemura.com/Blog%20-%20Why%20the%20Colts%20will%20go%208-8%20%20Free%20Agents.htm" class="btn btn-default btn-lg">Read More</a>
+                    <hr>
+                </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="./Blog_files/github.jpg" alt="">
                     <h2>Learning How to Git<br>
